--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,10 @@
     "react",
     "stage-0"
   ],
+  "env":{
+    "test":{
+      "presets": [["env"], "react", "stage-0"]
+    }
+  },
   "plugins": ["react-hot-loader/babel", "transform-decorators-legacy"]
 }
