--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.9.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
@@ -47,6 +48,7 @@
     "node-sass": "^4.5.3",
     "react-hot-loader": "next",
     "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
