--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
+    "sinon": "^4.0.1",
+    "chai": "^4.1.2",
     "node-sass": "^4.5.3",
     "react-hot-loader": "next",
     "react-test-renderer": "^16.0.0",
