--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,9 @@
   "env":{
     "test":{
       "presets": [["env"], "react", "stage-0"]
+    },
+    "e2e": {
+      "presets": [["env"], "react", "stage-0"]
     }
   },
   "plugins": ["react-hot-loader/babel", "transform-decorators-legacy"]
