--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "yarn run clear & webpack --config webpack/webpack.config.prod.js",
     "test": "jest",
     "test:watch": "jest --watchAll",
+    "e2e": "NODE_ENV=e2e mocha e2e/**/*.js --compilers js:babel-core/register --timeout 20000",
+    "e2e:watch": "NODE_ENV=e2e mocha e2e/**/*.js -w --compilers js:babel-core/register",
     "clear": "rm -r build"
   },
   "dependencies": {
@@ -39,19 +41,21 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
-    "sinon": "^4.0.1",
-    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
     "node-sass": "^4.5.3",
+    "puppeteer": "^0.12.0",
     "react-hot-loader": "next",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0",
     "sass-loader": "^6.0.6",
+    "sinon": "^4.0.1",
     "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.6.2",
